2015-03-17 Pierre Wieser <pwieser@trychlos.org>

	Define new 'recurrent' plugin (todo #213)

	* src/recurrent/Makefile.am,
	* src/recurrent/Makefile.in,
	* src/recurrent/ofa-module.c,
	* src/recurrent/ofa-recurrent.c,
	* src/recurrent/ofa-recurrent.h: new files.

	* configure,
	* configure.ac,
	* src/Makefile.am,
	* src/Makefile.in: updated accordingly.

	Let the plugins access to the application menu (todo #705)

	* src/api/ofa-extension.h: ofa_extension_startup() now takes a
	pointer to the GApplication.

	* src/core/ofa-plugin.c,
	* src/core/ofa-plugin.h,
	* src/import-bourso-pdf/ofa-module.c,
	* src/import-bourso/ofa-module.c,
	* src/import-lcl-pdf/ofa-module.c,
	* src/import-lcl/ofa-module.c,
	* src/mysql/ofa-module.c,
	* src/postgre/ofa-module.c: updated accordingly.

	* src/ui/ofa-application.c: new "main-window-created" signal.

	* src/ui/ofa-main-window.c: updated accordingly.

2015-03-16 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-bats-page.c: import BAT file (todo #642).

	Use date user preferences (todo #651)

	* src/core/ofa-box.c,
	* src/core/ofa-dossier-misc.c,
	* src/core/ofo-dossier.c,
	* src/core/ofo-entry.c,
	* src/core/ofo-rate.c,
	* src/core/ofs-bat.c,
	* src/core/ofs-ope.c,
	* src/import-bourso-pdf/ofa-importer.c,
	* src/import-bourso/ofa-importer.c,
	* src/import-lcl-pdf/ofa-importer.c,
	* src/import-lcl/ofa-importer.c,
	* src/ui/ofa-bat-properties-bin.c,
	* src/ui/ofa-bat-store.c,
	* src/ui/ofa-date-filter-bin.c,
	* src/ui/ofa-dossier-properties.c,
	* src/ui/ofa-dossier-store.c,
	* src/ui/ofa-exercice-store.c,
	* src/ui/ofa-guided-input-bin.c,
	* src/ui/ofa-ledger-close.c,
	* src/ui/ofa-ledger-properties.c,
	* src/ui/ofa-ledger-store.c,
	* src/ui/ofa-pdf-accounts-balance.c,
	* src/ui/ofa-pdf-books.c,
	* src/ui/ofa-pdf-entries-balance.c,
	* src/ui/ofa-pdf-ledgers.c,
	* src/ui/ofa-pdf-reconcil.c,
	* src/ui/ofa-rate-properties.c,
	* src/ui/ofa-rates-page.c,
	* src/ui/ofa-reconciliation.c,
	* src/ui/ofa-settlement.c,